fix: dark mode styles

--- a/src/components/sections/Skills/SkillItem.module.scss
+++ b/src/components/sections/Skills/SkillItem.module.scss
@@ -9,8 +9,8 @@
   margin: 0;
   border-radius: 4px;
   line-height: 1rem;
-  background-color: gray;
-  color: white;
+  background-color: #eee;
+  border: 1px solid black;
   font-size: 0.9em;
   cursor: pointer;
   transition: all 250ms ease;
@@ -30,7 +30,14 @@
 
   &[data-selected="false"] {
     background-color: #fff;
+    border-color: white;
     color: #333;
+
+    @media (prefers-color-scheme: dark) {
+      background-color: black;
+      color: #fff;
+      border-color: black;
+    }
   }
 }
 
